<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_client"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Ajouter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="Préferences"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="Rafraichir"
        app:showAsAction="ifRoom" />
</menu>